# damascus000

./: .gitignore  Cargo.toml  README.md  agent.md  build.rs  sample.txt
.cargo/: config.toml
benches/: protocol_bench.rs
crates/damascus-bench/: Cargo.toml
crates/damascus-bench/benches/: conv_round.rs
crates/damascus-bench/src/: lib.rs
crates/damascus-chain/: Cargo.toml
crates/damascus-chain/src/: lib.rs
crates/damascus-cli/: Cargo.toml
crates/damascus-cli/src/: main.rs
crates/damascus-commit/: Cargo.toml
crates/damascus-commit/src/: lib.rs
crates/damascus-conv/: Cargo.toml
crates/damascus-conv/src/: lib.rs  microblock.rs  params.rs  prover.rs  state.rs  verifier.rs
crates/damascus-crypto/: Cargo.toml
crates/damascus-crypto/src/: challenge.rs  lib.rs  rng.rs
crates/damascus-ring/: Cargo.toml
crates/damascus-ring/src/: lib.rs  module.rs  poly.rs
crates/damascus-sim/: Cargo.toml
crates/damascus-sim/src/: lib.rs
crates/damascus-twist/: Cargo.toml
crates/damascus-twist/src/: lib.rs
crates/damascus-types/: Cargo.toml
crates/damascus-types/src/: codec.rs  ids.rs  lib.rs
cuda/: fold_kernel.cu  ntt_kernel.cu
docs/: design_changes.md  divergences.md  params.md  pr1.md  pr2.md  pr3.md  pr4.md  pr5.md  pr6.md  prompt.md
examples/: full_flow.rs  validate_configs.rs
src/: lib.rs  main.rs
src/algebra/: field.rs  mod.rs  module.rs  ntt.rs  poly.rs
src/commitment/: hasher.rs  mod.rs  sis.rs
src/protocol/: mod.rs  prover.rs  transcript.rs  verifier.rs
src/utils/: config.rs  gpu.rs  io.rs  mod.rs
