[workspace]
members = ["crates/damascus-*"]
resolver = "2"

[package]
name = "damascus"
version.workspace = true
edition.workspace = true

[[bin]]
name = "damascus"
path = "src/main.rs"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
blake3 = "1"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1"
criterion = "0.5"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

damascus-conv = { path = "crates/damascus-conv" }
damascus-ring = { path = "crates/damascus-ring" }
damascus-sim = { path = "crates/damascus-sim" }
damascus-types = { path = "crates/damascus-types" }
