[package]
name = "damascus-core"
version = "0.1.0"
edition = "2021"
description = "Damascus-conv protocol prototype in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.5"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
memmap2 = "0.9"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[[bench]]
name = "protocol_bench"
harness = false
