[package]
name = "damascus-bench"
version.workspace = true
edition.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
rand_chacha.workspace = true

damascus-conv = { path = "../damascus-conv" }
damascus-ring = { path = "../damascus-ring" }
damascus-types = { path = "../damascus-types" }

[lib]
path = "src/lib.rs"

[[bench]]
name = "conv_round"
harness = false
