[package]
name = "damascus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "damascus-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

damascus-conv = { path = "../damascus-conv" }
damascus-sim = { path = "../damascus-sim" }

