[package]
name = "damascus-conv"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

damascus-crypto = { path = "../damascus-crypto" }
damascus-ring = { path = "../damascus-ring" }
damascus-types = { path = "../damascus-types" }

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true

